--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         padding: 10px 0px 10px 0px;
       } 
        .video, .thermometer, .order, .social {
-         border. 1px dotted;
+         border: 1px dotted;
          text-align: center;
       }
       .video {
@@ -30,22 +30,22 @@
       }
       .thermometer , .order, .social {
         /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height:40px;
-        line-height:40px
+        height: 40px;
+        line-height: 40px
       }
       dix.row {
         border: 1px solid;
       }
 
    </style>
- </head>
+   </head>
     <body>
       <div class="row navigation">
         <div class="span2 logo">
           Logo
         </div>
-        <div class="span6 blanc">
-          Blanc
+        <div class="span6 blank">
+          Blank
         </div>
         <div class="span4 about">
           About
