--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
           </p>
         </div>
         <div class="span5 copy">         
-           <img class="img-polaroid" src="http://placehold.it/480x300">
+           <img class="img-polaroid" src="https://raw.github.com/captroncoso/bitstarter/master/images/img2.jpg">
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="https://raw.github.com/captroncoso/bitstarter/master/images/img3.jpg">
         </div>
         <div class="span5 asset">   
                   
